--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ djangorestframework
 djangorestframework-simplejwt
 django-cors-headers
 psycopg2-binary   # if using Postgres
-  
+# For loading YAML files
